[gd_scene load_steps=48 format=3 uid="uid://cttwjpcjt0y0j"]

[ext_resource type="Script" uid="uid://duuw2hoby4pe7" path="res://scripts/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://iqp71v8m11i" path="res://assets/Colour1/Outline/120x80_PNGSheets/_Run.png" id="1_7p1mj"]
[ext_resource type="Texture2D" uid="uid://camtwe4uj1bc2" path="res://assets/Colour1/Outline/120x80_PNGSheets/_Attack.png" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://rklhniw6xpgp" path="res://assets/Colour1/Outline/120x80_PNGSheets/_Death.png" id="2_nenq2"]
[ext_resource type="Texture2D" uid="uid://bwqt0l7epoqgi" path="res://assets/Colour1/Outline/120x80_PNGSheets/_Idle.png" id="2_xwavj"]
[ext_resource type="Script" uid="uid://nt8nrid22x6d" path="res://components/damage_area.gd" id="4_5uy6h"]
[ext_resource type="Script" uid="uid://ggeyo5wfgxs3" path="res://components/health_component.gd" id="4_c4w8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("2_nenq2")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("2_nenq2")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("2_nenq2")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("2_nenq2")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("2_nenq2")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("2_nenq2")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("2_nenq2")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("2_nenq2")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lioqc"]
atlas = ExtResource("2_nenq2")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lg75"]
atlas = ExtResource("2_nenq2")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("2_xwavj")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("2_xwavj")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("2_xwavj")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("2_xwavj")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("2_xwavj")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("2_xwavj")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("2_xwavj")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("2_xwavj")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("2_xwavj")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("2_xwavj")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_7p1mj")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_otmr2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3vcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f82d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lioqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lg75")
}],
"loop": false,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ra3w"]
radius = 16.4355
height = 32.871

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 92.0054

[sub_resource type="Animation" id="Animation_5uy6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitSprite/HitArea/HitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4ra3w"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitSprite/HitArea/HitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_xwavj"]
resource_name = "remove_weapon"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4w8v"]
_data = {
&"RESET": SubResource("Animation_5uy6h"),
&"hit": SubResource("Animation_4ra3w"),
&"remove_weapon": SubResource("Animation_xwavj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c4w8v"]
radius = 9.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nenq2"]
radius = 19.0
height = 50.0

[node name="Enemy" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_4ra3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_otmr2")
animation = &"run"
autoplay = "idle"
frame = 5
frame_progress = 0.300325
offset = Vector2(0, -40)

[node name="HitSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_md0e3")
offset = Vector2(0, -40)
hframes = 4

[node name="HitArea" type="Area2D" parent="HitSprite"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="HitCollision" type="CollisionShape2D" parent="HitSprite/HitArea"]
unique_name_in_owner = true
position = Vector2(42, -19)
rotation = 1.89888
shape = SubResource("CapsuleShape2D_4ra3w")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -17)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="DetectedArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectedArea"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_md0e3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_c4w8v")
}
speed_scale = 3.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_c4w8v")
metadata/_custom_type_script = "uid://ggeyo5wfgxs3"

[node name="DamageAreaComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_5uy6h")
metadata/_custom_type_script = "uid://nt8nrid22x6d"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageAreaComponent"]
position = Vector2(4, -17)
shape = SubResource("CapsuleShape2D_c4w8v")

[node name="HPBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0.188539, 3.85046e-07, 0.919314, 1)
offset_left = -45.0
offset_top = -51.0
offset_right = 45.0
offset_bottom = -41.0
mouse_filter = 2
step = 0.001
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ApplyHit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ApplyHitCollision" type="CollisionShape2D" parent="ApplyHit"]
unique_name_in_owner = true
position = Vector2(33, -21)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nenq2")
debug_color = Color(0.933483, 2.30065e-05, 0.644478, 0.42)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.5
one_shot = true

[node name="RayCastForward" type="RayCast2D" parent="."]
position = Vector2(0, -11)
target_position = Vector2(14, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, -11)
target_position = Vector2(0, 12)
